--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ name: CI
 on: 
   push:
     branches:
-      - master
+      - main
 
 jobs: # 工作流
   build: # 自定义名称
@@ -25,8 +25,8 @@ jobs: # 工作流
           node-version: ${{ matrix.node-version }} # 版本
       - name: run deploy.sh # 步骤3 （同时部署到github和coding）
         env: # 设置环境变量
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }} # toKen私密变量
-          # CODING_TOKEN: ${{ secrets.CODING_TOKEN }} # 腾讯云开发者平台（coding）私密token
+          # GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }} # toKen私密变量
+          CODING_TOKEN: ${{ bd005ddb3c4630fa5c8ae4860d51225363ec36e2 }} # 腾讯云开发者平台（coding）私密token
         run: npm install && npm run deploy
 
       # - name: Build and Deploy # 步骤3 （只提交到github可以使用这个步骤）
